Add some qdd100 TODOs

--- a/hw/qdd100/TODO
+++ b/hw/qdd100/TODO
@@ -1,4 +1,5 @@
-stator appears to be about 1mm too far away from the rotor
+* mount holes should be an extra 1mm deep, only 2.5mm is inconvenient
+* stator appears to be about 1.2mm too far away from the rotor
 
 
 DONE 2019-11-18
