--- a/TODO
+++ b/TODO
@@ -1,9 +1,13 @@
+ * Limit maximum controllable speed to what the encoder can handle
+
+ * infinite rotation
+   * control uses floats, which fail once the position gets above a
+     few hundred revolutions
+
+
  * bring up 4.4
    * verify that I made new version pins
    * double check the pins that I changed
-
- * chassis
-   * print new bottom and internal covers
 
  * Torque constant drops off at higher currents, leading to inaccurate
    torque
@@ -33,15 +37,8 @@
 
  * would be nice if tview could show enum names for fault codes
 
- * New telemetry format
-   * fdcanusb bridge
-   * javascript tree viewer from network
-
  * rationalize all the debug tools w.r.t. serial/network/fdcanusb/robot
-   * tview
-   * multiplex_tool
-   * c++ moteus_tool
-   * make tview poll for more data immediately if something was present
+   * tview based on tplot2
 
  * design new absolute position sense board
 
