--- a/hw/mk2_chassis/TODO
+++ b/hw/mk2_chassis/TODO
@@ -1,3 +1,5 @@
+6Add vent slats in bottom left and right, and near the top of the side
+plates to allow for airflow
 
 DONE 2020-05-04
  * Extended the countersink in front plate by 1mm to make M3x6 bolts
