--- a/hw/mk2_leg/TODO
+++ b/hw/mk2_leg/TODO
@@ -1,3 +1,6 @@
+ * Upper leg needs more reinforcing around tension inserts... the
+   tension bolt bows them out and can cause them to break
+
  * Switch lower pulley to be held in place with socket cap screws
    instead of flat screws, move screws further away from bearing now
    that lower pulley is larger
